# pg_tpch

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.MD  README.md  performce.md  pg_tpch.control  pg_tpchrs.control
.github/workflows/: build.yml  package.yml  test.yml
cmake/: FindPostgreSQL.cmake
docs/: parallel-lineitem-notes.md
pg_regress/sql/: setup.sql
src/: CMakeLists.txt  encoding.rs  lib.rs  loader.rs  pg_tpcds--1.0.sql  pg_tpch--1.0.sql  pg_tpch.cpp  post_prepare.sql  pre_prepare.sql  schema.rs  tpch_queries.rs  utils.rs
src/expected/: tpch0.1.out  tpch0.5.out
src/sql/: tpch0.1.sql  tpch0.5.sql
src/tpch/: CMakeLists.txt  tpch_dsdgen.cpp  tpch_wrapper.cpp
src/tpch/dbgen/: build.cpp
src/tpch/include/: tpch_constants.hpp  tpch_dsdgen.h  tpch_wrapper.hpp
src/tpch/include/dbgen/: config.h  dss.h  dsstypes.h
src/tpch/schema/: customer.sql  lineitem.sql  nation.sql  orders.sql  part.sql  partsupp.sql  region.sql  supplier.sql
test/regress/: schedule
test/regress/expected/: tpch0.01.out  tpch0.02.out  tpch0.03.out
test/regress/sql/: tpch0.01.sql  tpch0.02.sql  tpch0.03.sql
