[package]
name = "pg_tpch"
version = "0.1.0"
authors = ["askyx"]
edition = "2021"
description = "A pgrx-based PostgreSQL extension for fast in-database TPC-H table creation, data loading, and query metadata."
license = "MIT"
readme = "README.md"
repository = "https://github.com/askyx/pg_tpchrs"
homepage = "https://github.com/askyx/pg_tpchrs"
keywords = ["postgres", "postgresql", "tpch", "pgrx", "benchmark"]
categories = ["database"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_tpch"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg18"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = "=0.17.0"
tpchgen = "1.1.0"

[dev-dependencies]
pgrx-tests = "=0.17.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
